updated all files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
       <span></span>
     </div>
     <div id="yes-window">
-      <h1>I <span class="love-txt">love</span> you Too</h1>
+      <p>I <span class="love-txt">love</span> you Too</p>
+      <p>I <span class="love-txt">love</span> you Too</p>
+      <p>I <span class="love-txt">love</span> you Too</p>
+      <p>I <span class="love-txt">love</span> you Too</p>
     </div>
     <script src="script.js"></script>
   </body>
