--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proposal4U</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container background">
       <h1 class="theQ">Do You Love Me?</h1>
+
       <div class="btn-container">
         <button class="btn yes-btn" id="yesBtn">Yes</button>
         <button class="btn no-btn" id="magikBtn">No</button>
@@ -35,11 +42,26 @@
       <span></span>
     </div>
     <div id="yes-window">
-      <p>I <span class="love-txt">love</span> you Too</p>
-      <p>I <span class="love-txt">love</span> you Too</p>
-      <p>I <span class="love-txt">love</span> you Too</p>
-      <p>I <span class="love-txt">love</span> you Too</p>
+      <p>
+        I <span class="love-txt">love</span> you Too
+        <span class="love-txt">MONA</span> Baby 😘
+      </p>
+      <p>
+        I <span class="love-txt">love</span> you Too
+        <span class="love-txt">MONA</span> Baby 😘
+      </p>
+      <p>
+        I <span class="love-txt">love</span> you Too
+        <span class="love-txt">MONA</span> Baby 😘
+      </p>
+      <p>
+        I <span class="love-txt">love</span> you Too
+        <span class="love-txt">MONA</span> Baby 😘
+      </p>
     </div>
+    <script src="
+    https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js
+    "></script>
     <script src="script.js"></script>
   </body>
 </html>
