--- a/index.html
+++ b/index.html
@@ -42,22 +42,10 @@
       <span></span>
     </div>
     <div id="yes-window">
-      <p>
-        I <span class="love-txt">love</span> you Too
-        <span class="love-txt">MONA</span> Baby 😘
-      </p>
-      <p>
-        I <span class="love-txt">love</span> you Too
-        <span class="love-txt">MONA</span> Baby 😘
-      </p>
-      <p>
-        I <span class="love-txt">love</span> you Too
-        <span class="love-txt">MONA</span> Baby 😘
-      </p>
-      <p>
-        I <span class="love-txt">love</span> you Too
-        <span class="love-txt">MONA</span> Baby 😘
-      </p>
+      <p>I <span class="love-txt">love</span> you Too</p>
+      <p>I <span class="love-txt">love</span> you Too</p>
+      <p>I <span class="love-txt">love</span> you Too</p>
+      <p>I <span class="love-txt">love</span> you Too</p>
     </div>
     <script src="
     https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js
